# Brute-Force-Game-Engine

./: AudioIntegratedBranch.files  AudioIntegratedBranch.includes  CMakeLists.txt  COMPILE  DEPENDENCIES  INSTALL  LICENSE  README  enuminit.bat
code/demos/Chat/: CMakeLists.txt  Main.cpp
code/demos/Pong/: BallControl.h  BarControl.h  CMakeLists.txt  Main.cpp  PongDefinitions.h  PongState.h  Score.cpp
code/demos/SpaceInvaders/: AudioState.cpp  AudioState.h  CMakeLists.txt  Cannon.cpp  Cannon.h  Collectable.cpp  Collectable.h  Globals.cpp  Globals.h  HumanGeneral.cpp  HumanGeneral.h  InvaderControl.cpp  InvaderControl.h  InvaderGeneral.cpp  InvaderGeneral.h  Main.cpp  MainState.cpp  MainState.h  PowerUpEffect.cpp  PowerUpEffect.h  ShipControl.cpp  ShipControl.h  SiConceptFactory.h  SiPropertyPlugin.h  SiSerialiser.h  ViewState.cpp  ViewState.h
code/engine/Audio/: Audio.cpp  Audio.h  AudioEvent.h  AudioEvent_fwd.h  AudioModule.h  AudioObject.cpp  AudioObject.h  AudioObjectFactory.cpp  AudioObjectFactory.h  CMakeLists.txt  Defines.h  Enums.xml  FileBase.h  FileFactory.cpp  FileFactory.h  HelperFunctions.cpp  HelperFunctions.h  Init.h  Interface.cpp  Interface.h  Level.cpp  Level.h  Listener.h  Loader.h  Main.cpp  Main.h  OggFile.cpp  OggFile.h  OpenALAudioObject.cpp  OpenALAudioObject.h  OpenALInit.cpp  OpenALInit.h  OpenALListener.cpp  OpenALListener.h  OpenALStream.cpp  OpenALStream.h  OpenALUpdateHandler.cpp  OpenAlUpdateHandler.h  Playlist.cpp  Playlist.h  (+11 more)
code/engine/AudioBlaster/: AudioEvent.h  AudioEvent_fwd.h  CMakeLists.txt  FileBase.h  FileFactory.cpp  FileFactory.h  HelperFunctions.h  Level.h  Loader.h  OggFile.cpp  OggFile.h  OpenALUpdateHandler.cpp  Stream.cpp  Stream.h  StreamWatch.cpp  StreamWatch.h  Transport.h  WaveFile.cpp  WaveFile.h
code/engine/Base/: CLogger.h  CMakeLists.txt  CVersion.h  CompileDateTime.h  Cpp.h  Examples.h  Interpolate.h  Logger.cpp  NameCurrentThread.cpp  NameCurrentThread.h  Pause.h  ResolveDns.h  Singleton.h  Version.cpp  dummy.cpp
code/engine/Controller/: Action.h  Axis.h  Button.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerInterface.cpp  Defs.h  Enums.xml  EventDumper.h  Interface.cpp  Interface.h  OISDevice.h  OISUtils.cpp  OISUtils.h  State.cpp  State.h  StateInsertion.cpp  StateInsertion.h  VIPBase.cpp  VIPComponents.h  VIPEnumToType.h  VIPEnvironment.h  VIPXmlInitializer.cpp  VIPXmlInitializer.h
code/engine/Core/: CMakeLists.txt  ClockUtils.cpp  ClockUtils.h  Defs.h  DynamicVariable.h  Math.cpp  Math.h  Path.cpp  PugiXmlFileHandle.cpp  PugiXmlFileHandle.h  PugiXmlTree.cpp  PugiXmlTree.h  ShowException.cpp  Utils.cpp  Utils.h  XmlFileHandle.h  XmlFileHandleFactory.cpp  XmlFileHandleFactory.h  XmlTree.h  qv4.cpp  qv4.h  strToBool.cpp  strToBool.h  v3.cpp  v3.h
code/engine/EnumGen/: CMakeLists.txt  Exception.h  Generator.h  Parser.h  Shared.h  main.cpp
code/engine/EventSystem/: CMakeLists.txt  Emitter.h  Event.h  EventFactory.h
code/engine/EventSystem/Core/: EventDefs.h  EventFunctor.h  EventLoop.cpp  EventLoop.h  (+3 more)
code/engine/Model/: Adapter.h  CMakeLists.txt  Enums.xml  GameObject.cpp  GameObject.h  Interface.cpp  Interface.h  Managed.cpp  Managed.h  Module.h  Sector.cpp  Sector.h  State.cpp  State.h  Trigger.h
code/engine/Network/: CMakeLists.txt  Checksum.cpp  Checksum.h  Client.cpp  Client.h  CreateBuffer.h  DataPayload.h  Defs.h  Enums.xml  Event.cpp  Event.h  Event_fwd.h  Handshake.h  Interface.cpp  Interface.h  Main.cpp  Main.h  Network.h  NetworkModule.cpp  NetworkModule.h  Network_fwd.h  Packet.h  Rtt.h  Segment.h  Server.cpp  Server.h  Tcp.h  Udp.h  UdpModule.cpp  UdpModule.h  UnreliableHeader.h
code/engine/Physics/: CMakeLists.txt  Defs.h  Enums.xml  Event_fwd.h  Interface.h  OdeTriMesh.h  PhysicsManager.cpp  PhysicsObject.cpp  PhysicsObject.h
code/engine/View/: CMakeLists.txt  Camera.cpp  CameraCreation.h  Console.cpp  Console.h  ControllerMyGuiAdapter.cpp  Convert.h  Effect.cpp  Effect.h  Enums.xml  Event.h  Event_fwd.h  Explosion.cpp  Explosion.h  Fps.h  HudElement.cpp  HudElement.h  Interface.h  KnightRiderExplosionTest.cpp  Light.cpp  Light.h  LightCreation.h  LightParameters.h  LoadMesh.cpp  Main.cpp  Main.h  MassTest.cpp  MenuEventData.h  ObjectCreation.h  Owner.cpp  Owner.h  Skybox.h  WindowAttributes.cpp  WindowAttributes.h
code/tests/AudioTest/: 3DSoundTest.h  CMakeLists.txt  CpuBurnTest.h  MusicAndSoundTest.h  PlaylistTest.h  SoundEmitterTest.h  StreamTest.h  StreamWatchTest.h  TestLoader.h  functions.h  main.cpp
code/tests/BaseTest/: CMakeLists.txt  CompileDateTimeTest.cpp
code/tests/ControllerTest/: CMakeLists.txt  Controller.rc  InputWindowWin32.cpp  InputWindowWin32.h  InputWindowX11.cpp  InputWindowX11.h  main.cpp  resource.h
code/tests/CoreTest/: CMakeLists.txt  MathTest.cpp
code/tests/EventTest/: CMakeLists.txt  EventCounter.h  MultiThreadedTest.cpp  SingleThreadTest.cpp
code/tests/LoaderTest/: CMakeLists.txt  main.cpp
code/tests/ModelTest/: CMakeLists.txt  GameObjectTest.cpp
code/tests/NetworkTest/: CMakeLists.txt  Main.cpp  Test.h
code/tests/NetworkTest2/: CMakeLists.txt  DestinationSenderTest.cpp  IPacketTest.cpp  OPacketTest.cpp
code/tests/ObjectSerialization/: CMakeLists.txt  main.cpp
code/tests/SerializationTest/: CMakeLists.txt  main.cpp
code/tests/SynchronizationTest/: CMakeLists.txt  Main.cpp
code/tests/WeaponTest/: CMakeLists.txt  Main.cpp
code/tools/Composer/: Actions.h  AdapterControl.cpp  AdapterControl.h  AnimationControl.cpp  AnimationControl.h  BaseFeature.cpp  BaseFeature.h  CMakeLists.txt  CameraControl.cpp  CameraControl.h  Connection.h  LightControl.cpp  LightControl.h  Main.cpp  MaterialChange.h  MeshControl.cpp  MeshControl.h  Module.h  ModuleControl.cpp  ModuleControl.h  OpenSaveDialog.cpp  OpenSaveDialog.h  SharedData.h  SkyBoxSelect.cpp  SkyBoxSelect.h  SubEntitySelect.cpp  SubEntitySelect.h  TextureControl.cpp  TextureControl.h  TextureUnit.h
code/tools/Leveler/: Actions.h  BaseFeature.h  CMakeLists.txt  CameraControl.cpp  CameraControl.h  Event_fwd.h  OpenSaveDialog.cpp  OpenSaveDialog.h  SharedData.h  main.cpp
(+156 files in other folders)
