cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(Chat)

FILE(GLOB CHAT_SOURCES
	*.cpp
)

FILE(GLOB CHAT_HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_EXECUTABLE(bfgChat ${CHAT_SOURCES} ${CHAT_HEADERS})

SET_TARGET_PROPERTIES(bfgChat PROPERTIES OUTPUT_NAME_DEBUG "bfgChat_d")

TARGET_LINK_LIBRARIES(bfgChat
	bfgBase
	bfgCore
	bfgEventCore
	bfgNetwork
	bfgView
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${OGRE_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
	${OIS_LIBRARIES}


)

INSTALL(TARGETS bfgChat
        RUNTIME DESTINATION ${BFG_BIN_DIR}
        COMPONENT runtime)
