cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(Pong "0.3.0")

FILE(GLOB PONG_SOURCES
	*.cpp
)

FILE(GLOB PONG_HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBSNDFILE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_EXECUTABLE(bfgPong ${PONG_SOURCES} ${PONG_HEADERS})

SET_TARGET_PROPERTIES(bfgPong PROPERTIES OUTPUT_NAME_DEBUG "bfgPong_d")

TARGET_LINK_LIBRARIES(bfgPong
	bfgBase
	bfgController
	bfgCore
	bfgEventCore
	bfgModel
	bfgPhysics
	bfgView
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${OIS_LIBRARIES}
	${OGRE_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
	${LIBSNDFILE_LIBRARY}
	${OPENAL_LIBRARY}
	${VORBIS_LIBRARIES} 
	${VORBIS_FILE_LIBRARIES}
	${OGG_LIBRARIES}
	TinyXML
	ode
)

INSTALL(TARGETS bfgPong
        RUNTIME DESTINATION ${BFG_BIN_DIR}
        COMPONENT runtime)
