cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(AudioBlaster "0.1.0")

FILE(GLOB AudioBlaster_SOURCES *.cpp)
FILE(GLOB AudioBlaster_HEADERS *.h *.xml *.hh)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BOOST_GEOMETRY_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBSNDFILE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

ADD_CUSTOM_TARGET(AudioEnums
	bfgEnumGen --input ${CMAKE_CURRENT_SOURCE_DIR}/Enums.xml
	        --header ${CMAKE_CURRENT_SOURCE_DIR}/Enums.hh
	        --source ${CMAKE_CURRENT_SOURCE_DIR}/Enums.cpp
	DEPENDS bfgEnumGen
)

ADD_DEFINITIONS(-DAUDIO_BLASTER_EXPORTS)

IF(WIN32)
	ADD_DEFINITIONS(-DAUDIO_BLASTER_EXPORTS)
ENDIF(WIN32)

ADD_LIBRARY(bfgAudioBlaster SHARED
	${AudioBlaster_SOURCES}
	${AudioBlaster_HEADERS}
)

TARGET_LINK_LIBRARIES(bfgAudioBlaster
	${Boost_LIBRARIES}
	${LIBSNDFILE_LIBRARY}
	${VORBIS_LIBRARIES} 
	${VORBIS_FILE_LIBRARIES}
	${OGG_LIBRARIES}
	${OPENAL_LIBRARY}
	bfgCore
	bfgEventCore
)

INSTALL(TARGETS bfgAudioBlaster
        LIBRARY DESTINATION ${BFG_LIB_DIR}
        RUNTIME DESTINATION ${BFG_LIB_DIR})

INSTALL(FILES ${AudioBlaster_HEADERS}
        DESTINATION "${BFG_PACKAGE_INCLUDE_DIR}"
        COMPONENT devel)

ADD_DEPENDENCIES(bfgAudioBlaster AudioEnums)
