cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(Base "1.0.0")

FILE(GLOB Base_SOURCES *.cpp)
FILE(GLOB Base_HEADERS *.h)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

ADD_LIBRARY(bfgBase STATIC ${Base_SOURCES} ${Base_HEADERS})

SET_TARGET_PROPERTIES(bfgBase PROPERTIES OUTPUT_NAME_DEBUG "bfgBase_d")

INSTALL(TARGETS bfgBase 
	ARCHIVE DESTINATION ${BFG_LIB_DIR}
	COMPONENT devel
)

INSTALL(FILES ${Base_HEADERS} 
	DESTINATION ${BFG_PACKAGE_INCLUDE_DIR}
	COMPONENT devel
)
