cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(EnumGen "1.0.0")

FILE(GLOB EnumGen_SOURCES *.cpp)
FILE(GLOB EnumGen_HEADERS *.h)

INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_EXECUTABLE(bfgEnumGen
	${EnumGen_SOURCES}
	${EnumGen_HEADERS}
)

TARGET_LINK_LIBRARIES(bfgEnumGen TinyXML ${Boost_LIBRARIES})

INSTALL(TARGETS bfgEnumGen 
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT runtime
)
