CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

BFG_INIT_PACKAGE(EventSystem "1.0.0")

FILE(GLOB Event_SOURCES         *.cpp)
FILE(GLOB EventCore_SOURCES     Core/*.cpp)
FILE(GLOB EventNetwork_SOURCES  Network/*.cpp)
FILE(GLOB EventSuite_SOURCES    EventSuite_Con/*.cpp)
FILE(GLOB EventTest_SOURCES     EventTypesTest/*.cpp)

FILE(GLOB Event_HEADERS         *.h)
FILE(GLOB EventCore_HEADERS     Core/*.h)
FILE(GLOB EventNetwork_HEADERS  Network/*.h )
FILE(GLOB EventSuite_HEADERS    EventSuite_Con/*.h)
FILE(GLOB EventTest_HEADERS     EventTypesTest/*.h)

SOURCE_GROUP("." FILES ${Event_SOURCES} ${Event_HEADERS})
SOURCE_GROUP("Core" FILES ${EventCore_SOURCES} ${EventCore_HEADERS})
SOURCE_GROUP("Test" FILES ${EventTest_SOURCES} ${EventTest_HEADERS})
SOURCE_GROUP("Network" FILES ${EventNetwork_SOURCES} ${EventNetwork_HEADERS})
SOURCE_GROUP("Suite" FILES ${EventSuite_SOURCES} ${EventSuite_HEADERS})

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

ADD_LIBRARY(bfgEventCore STATIC
	${Event_SOURCES}
	${Event_HEADERS}
	${EventCore_SOURCES}
	${EventCore_HEADERS}
	${EventNetwork_SOURCES}
	${EventNetwork_HEADERS}
)

SET_TARGET_PROPERTIES(bfgEventCore PROPERTIES OUTPUT_NAME_DEBUG "bfgEventCore_d")

TARGET_LINK_LIBRARIES(bfgEventCore
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	bfgBase
)

INSTALL(TARGETS bfgEventCore
	ARCHIVE DESTINATION ${BFG_LIB_DIR}
	COMPONENT devel
)

INSTALL(FILES ${Event_HEADERS}
	DESTINATION ${BFG_PACKAGE_INCLUDE_DIR}
	COMPONENT devel
)

INSTALL(FILES ${EventCore_HEADERS}
	DESTINATION "${BFG_PACKAGE_INCLUDE_DIR}/Core"
	COMPONENT devel
)
		
INSTALL(FILES ${EventNetwork_HEADERS}
	DESTINATION "${BFG_PACKAGE_INCLUDE_DIR}/Network"
	COMPONENT devel
)		
