cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(Network "0.1.0")

FILE(GLOB Network_SOURCES *.cpp)
FILE(GLOB Network_HEADERS *.h *.hh)
FILE(GLOB Network_SCRIPTS *.xml)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

ADD_DEFINITIONS(-DNETWORK_EXPORTS)

ADD_CUSTOM_TARGET(NetworkEnums
	bfgEnumGen --input ${CMAKE_CURRENT_SOURCE_DIR}/Enums.xml
	        --header ${CMAKE_CURRENT_SOURCE_DIR}/Enums.hh
	        --source ${CMAKE_CURRENT_SOURCE_DIR}/Enums.cpp
	DEPENDS bfgEnumGen
)

ADD_LIBRARY(bfgNetwork SHARED
	${Network_SOURCES}
	${Network_HEADERS}
	${Network_SCRIPTS}
)

SET_TARGET_PROPERTIES(bfgNetwork PROPERTIES OUTPUT_NAME_DEBUG "bfgNetwork_d")

TARGET_LINK_LIBRARIES(bfgNetwork
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	bfgBase
	bfgEventCore
	bfgCore
)

ADD_DEPENDENCIES(bfgNetwork bfgCore bfgEventCore bfgEnumGen NetworkEnums)

IF(WIN32)
	ADD_DEFINITIONS(-DNETWORK_EXPORTS)
ENDIF(WIN32)

INSTALL(TARGETS bfgNetwork
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	LIBRARY DESTINATION ${BFG_LIB_DIR}
	COMPONENT runtime
	ARCHIVE DESTINATION ${BFG_LIB_DIR}
	COMPONENT devel
)

INSTALL(FILES ${Network_HEADERS}
	DESTINATION ${BFG_PACKAGE_INCLUDE_DIR}
	COMPONENT devel
)

