cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(Physics "0.3.3")

FILE(GLOB Physics_SOURCES *.cpp)
FILE(GLOB Physics_HEADERS *.h *.hh)
FILE(GLOB Physics_SCRIPTS *.xml)

FILE(GLOB PHYSICS_FILES
	${Physics_SOURCES}
	${Physics_HEADERS}
	${Physics_SCRIPTS}
)

SOURCE_GROUP("." FILES ${PHYSICS_FILES})

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ODE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})          # Ogre::m3x3 
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DdSINGLE)

IF(WIN32)
	ADD_DEFINITIONS(-DPHYSICS_EXPORTS)
ENDIF(WIN32)

ADD_CUSTOM_TARGET(PhysicsEnums 
	bfgEnumGen --input ${CMAKE_CURRENT_SOURCE_DIR}/Enums.xml
	        --header ${CMAKE_CURRENT_SOURCE_DIR}/Enums.hh
	        --source ${CMAKE_CURRENT_SOURCE_DIR}/Enums.cpp
	DEPENDS bfgEnumGen
)

ADD_LIBRARY(bfgPhysics SHARED ${PHYSICS_FILES})

SET_TARGET_PROPERTIES(bfgPhysics PROPERTIES OUTPUT_NAME_DEBUG "bfgPhysics_d")

TARGET_LINK_LIBRARIES(bfgPhysics
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	ode
	bfgBase
	bfgEventCore
	bfgCore
	bfgView              # View::loadMesh()
)

ADD_DEPENDENCIES(bfgPhysics PhysicsEnums)

INSTALL(TARGETS bfgPhysics
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	LIBRARY DESTINATION ${BFG_LIB_DIR}
	COMPONENT runtime
	ARCHIVE DESTINATION ${BFG_LIB_DIR}
	COMPONENT devel
)
		
INSTALL(FILES ${Physics_HEADERS}
	DESTINATION ${BFG_PACKAGE_INCLUDE_DIR}
	COMPONENT devel
)

