cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(View "0.5.0")

FILE(GLOB View_SOURCES *.cpp)
FILE(GLOB View_HEADERS *.h *.hh)
FILE(GLOB View_SCRIPTS *.xml)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

ADD_DEFINITIONS(-DVIEW_EXPORTS)

ADD_CUSTOM_TARGET(ViewEnums
	bfgEnumGen --input ${CMAKE_CURRENT_SOURCE_DIR}/Enums.xml
	        --header ${CMAKE_CURRENT_SOURCE_DIR}/Enums.hh
	        --source ${CMAKE_CURRENT_SOURCE_DIR}/Enums.cpp
	DEPENDS bfgEnumGen
)

ADD_LIBRARY(bfgView SHARED
	${View_SOURCES}
	${View_HEADERS}
)

SET_TARGET_PROPERTIES(bfgView PROPERTIES OUTPUT_NAME_DEBUG "bfgView_d")

TARGET_LINK_LIBRARIES(bfgView
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${OGRE_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
	${OIS_LIBRARIES}
	bfgBase
	bfgController
	bfgEventCore
	bfgCore
)

ADD_DEPENDENCIES(bfgView bfgCore bfgController bfgEventCore bfgEnumGen ViewEnums)

IF(WIN32)
	ADD_DEFINITIONS(-DVIEW_EXPORTS)
ENDIF(WIN32)

INSTALL(TARGETS bfgView
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	LIBRARY DESTINATION ${BFG_LIB_DIR}
	COMPONENT runtime
	ARCHIVE DESTINATION ${BFG_LIB_DIR}
	COMPONENT devel
)

INSTALL(FILES ${View_HEADERS}
	DESTINATION ${BFG_PACKAGE_INCLUDE_DIR}
	COMPONENT devel
)

