cmake_minimum_required(VERSION 2.6)

FILE(GLOB AudioTest_SOURCES *.cpp)
FILE(GLOB AudioTest_HEADERS *.h)

BFG_INIT_PACKAGE(AudioTest "0.3.0")

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBSNDFILE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(../..)

ADD_EXECUTABLE(bfgAudioTest ${AudioTest_SOURCES} ${AudioTest_HEADERS})

SET_TARGET_PROPERTIES(bfgAudioTest PROPERTIES OUTPUT_NAME_DEBUG "bfgAudioTest_d")

TARGET_LINK_LIBRARIES(bfgAudioTest
	bfgAudio
	bfgEventCore
	bfgCore
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${OPENAL_LIBRARY}
	${VORBIS_LIBRARIES}
)

INSTALL(TARGETS bfgAudioTest
        RUNTIME DESTINATION ${BFG_BIN_DIR}
        COMPONENT devel
)
