CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

BFG_INIT_PACKAGE(BaseTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(bfgBaseTest ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(bfgBaseTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${OGRE_LIBRARIES}
	bfgBase
)

INSTALL(TARGETS bfgBaseTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
