cmake_minimum_required(VERSION 2.6)

INCLUDE(USE)

USE_INIT_PACKAGE(ControllerTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB OTHER
	*.rc
)

INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})

ADD_EXECUTABLE(ControllerTest ${SOURCES})

TARGET_LINK_LIBRARIES(ControllerTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${X11_LIBRARIES}
	Base
	Controller
	Core
	EventCore
)

INSTALL(TARGETS ControllerTest
	RUNTIME DESTINATION ${USE_BIN_DIR}
	COMPONENT runtime)
