cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(ControllerTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB OTHER
	*.rc
)

INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})

ADD_EXECUTABLE(bfgControllerTest ${SOURCES} ${OTHER})

SET_TARGET_PROPERTIES(bfgControllerTest PROPERTIES OUTPUT_NAME_DEBUG "bfgControllerTest_d")

TARGET_LINK_LIBRARIES(bfgControllerTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${X11_LIBRARIES}
	bfgBase
	bfgController
	bfgCore
	bfgEventCore
)

INSTALL(TARGETS bfgControllerTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
