CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

BFG_INIT_PACKAGE(CoreTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(bfgCoreTest ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(bfgCoreTest PROPERTIES OUTPUT_NAME_DEBUG "bfgCoreTest_d")

TARGET_LINK_LIBRARIES(bfgCoreTest
	${Boost_LIBRARIES}
	bfgCore
)

INSTALL(TARGETS bfgCoreTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
